--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -6,11 +6,11 @@
 @source "../../../app/views/**/*";
 @source "../../../app/components/**/*";
 
-@plugin "./daisyui.js" {
+@plugin "daisyui" {
 }
 
 /* Optional for custom themes – Docs: https://daisyui.com/docs/themes/#how-to-add-a-new-custom-theme */
-@plugin "./daisyui-theme.js"{
+@plugin "daisyui/theme" {
   name: "decor-dark";
   default: false;
   prefersdark: true;
