--- a/test/components/previews/decor/nav/side_navbar_preview/daisyui_example.html.erb
+++ b/test/components/previews/decor/nav/side_navbar_preview/daisyui_example.html.erb
@@ -1,5 +1,5 @@
 <%=
-  render ::Navigo::SideNavbar.new(
+  render ::Decor::Nav::SideNavbar.new(
     landscape_logo_url: "https://via.placeholder.com/200x50/00D7FF/FFFFFF?text=DaisyUI",
     avatar_logo_url: "https://via.placeholder.com/50x50/00D7FF/FFFFFF?text=D",
     collapsed: start_collapsed,
