--- a/test/components/previews/decor/page_section_preview/playground.html.erb
+++ b/test/components/previews/decor/page_section_preview/playground.html.erb
@@ -1,4 +1,4 @@
-<%= render ::Navigo::PageSection.new(
+<%= render ::Decor::PageSection.new(
   title: title,
   description: description,
   separator: show_separator,
