--- a/app/views/layouts/component_preview.html.erb
+++ b/app/views/layouts/component_preview.html.erb
@@ -31,13 +31,11 @@
     <%= render ::Decor::Modals::Modal.new %>
     <%= render ::Decor::Modals::ConfirmModal.new %>
     <%= render ::Decor::NotificationManager.new(
-      data_maps: [
-        {
-          initial_notifications: [notice, alert].compact.map do |message|
-            {content: {content: render(::Decor::Notification.new(title: message)), __safe: true}}
-          end
-        }
-      ]
+      stimulus_values: {
+        initial_notifications: [notice, alert].compact.map do |message|
+          {content: {content: render(::Decor::Notification.new(title: message)), __safe: true}}
+        end
+      }
     ) %>
 
     <%= tag.div nil, data: {controller: "util--dev-form-fill"} if Rails.env.development? %>
