--- a/test/components/previews/decor/modals/modal_close_button_preview/in_modal.html.erb
+++ b/test/components/previews/decor/modals/modal_close_button_preview/in_modal.html.erb
@@ -22,7 +22,7 @@
       label: "Cancel",
       close_reason: "cancel",
       full_width: true,
-      theme: :secondary,
+      color: :secondary,
       variant: :outlined,
       html_options: {class: "sm:mt-0 sm:col-start-1 sm:text-sm"}
     ) %>
