--- a/test/components/previews/decor/modals/modal_open_button_preview/opens_modal.html.erb
+++ b/test/components/previews/decor/modals/modal_open_button_preview/opens_modal.html.erb
@@ -4,7 +4,7 @@
   close_on_overlay_click: close_on_overlay_click,
   label: label,
   variant: variant,
-  theme: theme,
+  color: color,
   size: size,
   tag: tag,
   disabled: disabled,
