--- a/test/components/previews/decor/page_preview/playground.html.erb
+++ b/test/components/previews/decor/page_preview/playground.html.erb
@@ -23,7 +23,7 @@
     <% end %>
   <% end %>
   <% if show_example_badge %>
-    <% page.with_badge(label: "Public Catalog", color: :primary) %>
+    <% page.with_badge(label: "Public Catalog", style: :primary) %>
   <% end %>
   <% if show_example_tag %>
     <% page.with_tag(label: "Active", icon: "check-circle", color: :success) %>
