--- a/test/components/previews/decor/tables/data_table_builder_preview/playground.html.erb
+++ b/test/components/previews/decor/tables/data_table_builder_preview/playground.html.erb
@@ -19,4 +19,4 @@ dt = klass.new(
   dt.column(:col2, stretch: true, sortable: true) { Random.rand }
   dt.column(:col3, emphasis: :low) { Random.rand }
 end %>
-<%= render dt.component %>
+<%= render dt %>
