Gem updates and doc updates

--- a/test/components/docs/01_introduction.md.erb
+++ b/test/components/docs/01_introduction.md.erb
@@ -126,7 +126,7 @@ render Decor::Forms::TextField.new(
 # Navigation
 render Decor::Nav::SideNavbar.new do |navbar|
   navbar.with_section(title: "Main") do |section|
-    section.with_item(title: "Dashboard", href: "/dashboard")
+    section.with_item(title: "Dashboard", path: "/dashboard")
   end
 end
 ```
